@startuml

skinparam dpi 200
skinparam classAttributeFontSize 8
skinparam classArrowFontSize 9
skinparam classFontSize 10
skinparam nodesep 90
skinparam ranksep 40
hide stereotype
skinparam class {
	BackgroundColor White
	BackgroundColor<<Sample>> LightPink
	BackgroundColor<<User>> LightBlue
	BackgroundColor<<Metadata>> LightGreen
	BackgroundColor<<Annotation>> LightYellow
	BackgroundColor<<Project>> Orchid
}

class Project <<Project>> {
    String name
}

class MetadataField <<Metadata>> {
    String name, type
}
Project "forProject 1" -- "metadataFields many" MetadataField
Project "containedIn 1" -- "contains many" Sample

class MetadataValue <<Metadata>> {
    String value
}
MetadataValue "valued many" -up- "values 1" MetadataField
MetadataValue "has many" -right- "for 1" Sample

class Sample <<Sample>> {
    String text
}

class XMLSample <<Sample>> extends Sample {
    String content
}

class Tag <<Annotation>> {
    String name
}
Tag "tags many" -up- "forProject 1" Project
Tag "child many" -- "parent 0..1" Tag
Tag "uses 1" -- "usedIn many" Annotation

class Annotation <<Annotation>> {
    Integer start, end
    Boolean reviewed
}
Annotation "annotatedBy many" -left- "annotates 1" Sample

class User <<User>> {
    String username
    String email
}

class Linguist <<User>> extends User {
}
Linguist "1 annotatedBy" -- "many annotates" Annotation

class Admin <<User>> extends User {
}

class AnnotationStatus <<Annotation>> {
    String name
}
AnnotationStatus "many" -- "1" Project
AnnotationStatus "many" -- "many" Sample

@enduml